--- a/angular-moments/src/app/app.component.html
+++ b/angular-moments/src/app/app.component.html
@@ -1,2 +1,15 @@
-<h1>Hello World!</h1>
-<app-counter></app-counter>
+<main>
+<h1>Angular Todo!</h1>
+
+<form action="">
+<input type="text" name="" id="">
+<input type="text" name="" id="">
+</form>
+
+<app-todo-card [todoName]="todo.name" [todoDuration]="todo.duration"></app-todo-card>
+
+</main>
+
+
+
+
