todocard data binding

--- a/angular-moments/src/app/app.component.html
+++ b/angular-moments/src/app/app.component.html
@@ -7,6 +7,7 @@
 </form>
 
 <app-todo-card [todoName]="todo.name" [todoDuration]="todo.duration"></app-todo-card>
+<app-todo-card [todoName]="todo.name" [todoDuration]="todo.duration"></app-todo-card>
 
 </main>
 
