--- a/angular-moments/src/app/app.component.html
+++ b/angular-moments/src/app/app.component.html
@@ -1,13 +1,16 @@
 <main>
 <h1>Angular Todo!</h1>
 
-<form action="">
-<input type="text" name="" id="">
-<input type="text" name="" id="">
-</form>
 
-<app-todo-card [todoName]="todo.name" [todoDuration]="todo.duration"></app-todo-card>
-<app-todo-card [todoName]="todo.name" [todoDuration]="todo.duration"></app-todo-card>
+<input type="text" name="" id="">
+<input type="text" name="" id="">
+<button (click)="addTodo()">Add Todo!</button>
+
+<app-todo-card
+[todoName]="todo.name"
+[todoDuration]="todo.duration"
+*ngIf="showTodo">
+</app-todo-card>
 
 </main>
 
