--- a/angular-todo/src/app/components/todo-card/todo-card.component.html
+++ b/angular-todo/src/app/components/todo-card/todo-card.component.html
@@ -2,5 +2,5 @@
   <p>{{todoName}}</p>
   <p>{{todoDuration}}</p>
 
-  <button><img src="" alt=""/>X</button>
+  <button (delete)="onDelete()"><img src="" alt=""/>X</button>
 </section>
