--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -9,7 +9,8 @@
 [todoName]="todo.name"
 [todoDuration]="todo.duration"
 [todoIsCompleted]="todo.isCompleted"
-*ngFor="let todo of todos">
+*ngFor="let todo of todos"
+>
 </app-todo-card>
 
 </main>
